adjust footer to prevent horizontal scroll

--- a/homepage.css
+++ b/homepage.css
@@ -33,16 +33,19 @@ input[type=text]:focus-visible{
 
 footer {
     position: absolute;
+    margin-left: -1%;
+    padding-right: .5%;
     bottom: 0;
-    width: 100%;
+    width: 99.5%;
     background-color: #f2f2f2;
     height: 47px;
+    overflow:hidden;
 }
 footer ul{
     display: flex;
     justify-content: space-between;
-    position: relative;
     padding-top: 1em;
+    padding-left: 1%;
 }
 footer li{
     margin-right: 1em;
